rodape, janela navegacao

--- a/modelo/index.html
+++ b/modelo/index.html
@@ -25,19 +25,24 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Illuminati</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<!-- <h1>Rap102</h1> -->
+								<iframe width="940" height="520" src="https://www.youtube.com/embed/QS59LPNdpEA?autoplay=1">
+								</iframe>
+								<!-- <div class="ytp-cued-thumbnail-overlay-image">
+
+								</div> -->
+								<!-- <p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p> -->
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Home</a></li>
+								<!-- <li><a href="#intro">Home</a></li> -->
 								<!-- falta validar esse campo -->
 								<li><a href="#about">About</a></li>
 								<li><a href="#work">Agenda</a></li>
 								<li><a href="#about">Músicas</a></li>
-								<li><a href="#contact">Contato</a></li>
+								<!-- <li><a href="#contact">Contato</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -67,6 +72,19 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
 								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<header id="header">
+									<nav>
+										<ul>
+											<!-- <li><a href="#intro">Home</a></li> -->
+											<!-- falta validar esse campo -->
+											<li><a href="#about">About</a></li>
+											<li><a href="#work">Agenda</a></li>
+											<li><a href="#about">Músicas</a></li>
+											<!-- <li><a href="#contact">Contato</a></li> -->
+											<!--<li><a href="#elements">Elements</a></li>-->
+										</ul>
+									</nav>
+								</header>
 							</article>
 
 							<!-- Contact -->
@@ -347,10 +365,29 @@
 					</div>
 
 					<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer"> -->
 						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
-						<p class="copyright">&copy; <a href="#">Illuminati</a>.</p>
-					</footer>
+						<!-- <p class="copyright">&copy; <a href="#">Illuminati</a>.</p> -->
+						<!-- <ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+					</footer> -->
+
+					<div>
+						<ul class="icons">
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+							<li><a href="#" class="icon fa-spotify"><span class="label">Spotify</span></a></li>
+							<li><a href="#" class="icon fa-soundcloud"><span class="label">Soundcloud</span></a></li>
+						</ul>
+					</div>
+					<div>
+						<p style="top: 50px;"> Contato: gruporap102@gmail.com | (031) 99220-3082 </p>
+					</div>
 
 			</div>
 
