fix: upgrade/corrections

--- a/modelo/index.html
+++ b/modelo/index.html
@@ -21,12 +21,12 @@
 					<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-diamond"></span>
+							<!--<span class="icon fa-diamond"></span>-->
 						</div>
 						<div class="content">
 							<div class="inner">
 								<!-- <h1>Rap102</h1> -->
-								<iframe width="940" height="520" src="https://www.youtube.com/embed/QS59LPNdpEA?autoplay=1">
+								<iframe width="600rem" height="500rem" src="https://www.youtube.com/embed/QS59LPNdpEA?autoplay=1">
 								</iframe>
 								<!-- <div class="ytp-cued-thumbnail-overlay-image">
 
@@ -386,7 +386,8 @@
 						</ul>
 					</div>
 					<div>
-						<p style="top: 50px;"> Contato: gruporap102@gmail.com | (031) 99220-3082 </p>
+						<br><br>
+						<p style="top: 50px;"> CONTATO: gruporap102@gmail.com | (031) 99220-3082 </p>
 					</div>
 
 			</div>
